fix spacings

--- a/src/client/src/containers/ReviewAndGenerate/styles.module.css
+++ b/src/client/src/containers/ReviewAndGenerate/styles.module.css
@@ -18,6 +18,7 @@
 .inputTitle {
   font-size: 1em;
   font-weight: bold;
+  margin-bottom: 3px;
 }
 
 .outputPathContainer,
